@@ -63,6 +63,11 @@ specifier|public
 specifier|abstract
 class|class
 name|IndexCommit
+implements|implements
+name|Comparable
+argument_list|<
+name|IndexCommit
+argument_list|>
 block|{
 comment|/**    * Get the segments file (<code>segments_N</code>) associated     * with this commit point.    */
 DECL|method|getSegmentsFileName
@@ -244,6 +249,60 @@ parameter_list|()
 throws|throws
 name|IOException
 function_decl|;
+DECL|method|compareTo
+specifier|public
+name|int
+name|compareTo
+parameter_list|(
+name|IndexCommit
+name|commit
+parameter_list|)
+block|{
+name|long
+name|gen
+init|=
+name|getGeneration
+argument_list|()
+decl_stmt|;
+name|long
+name|comgen
+init|=
+name|commit
+operator|.
+name|getGeneration
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|gen
+operator|<
+name|comgen
+condition|)
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+name|gen
+operator|>
+name|comgen
+condition|)
+block|{
+return|return
+literal|1
+return|;
+block|}
+else|else
+block|{
+return|return
+literal|0
+return|;
+block|}
+block|}
 block|}
 end_class
 end_unit
