@@ -2379,16 +2379,7 @@ class|class
 name|CommitPoint
 extends|extends
 name|IndexCommit
-implements|implements
-name|Comparable
-argument_list|<
-name|CommitPoint
-argument_list|>
 block|{
-DECL|field|gen
-name|long
-name|gen
-decl_stmt|;
 DECL|field|files
 name|Collection
 argument_list|<
@@ -2512,13 +2503,6 @@ argument_list|,
 literal|true
 argument_list|)
 argument_list|)
-expr_stmt|;
-name|gen
-operator|=
-name|segmentInfos
-operator|.
-name|getGeneration
-argument_list|()
 expr_stmt|;
 name|isOptimized
 operator|=
@@ -2690,50 +2674,6 @@ block|{
 return|return
 name|deleted
 return|;
-block|}
-DECL|method|compareTo
-specifier|public
-name|int
-name|compareTo
-parameter_list|(
-name|CommitPoint
-name|commit
-parameter_list|)
-block|{
-if|if
-condition|(
-name|gen
-operator|<
-name|commit
-operator|.
-name|gen
-condition|)
-block|{
-return|return
-operator|-
-literal|1
-return|;
-block|}
-elseif|else
-if|if
-condition|(
-name|gen
-operator|>
-name|commit
-operator|.
-name|gen
-condition|)
-block|{
-return|return
-literal|1
-return|;
-block|}
-else|else
-block|{
-return|return
-literal|0
-return|;
-block|}
 block|}
 block|}
 block|}
