@@ -12228,6 +12228,174 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|// LUCENE-2753
+DECL|method|testListCommits
+specifier|public
+name|void
+name|testListCommits
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|SnapshotDeletionPolicy
+name|sdp
+init|=
+operator|new
+name|SnapshotDeletionPolicy
+argument_list|(
+operator|new
+name|KeepOnlyLastCommitDeletionPolicy
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+literal|null
+argument_list|)
+operator|.
+name|setIndexDeletionPolicy
+argument_list|(
+name|sdp
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|sdp
+operator|.
+name|snapshot
+argument_list|(
+literal|"c1"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|sdp
+operator|.
+name|snapshot
+argument_list|(
+literal|"c2"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|sdp
+operator|.
+name|snapshot
+argument_list|(
+literal|"c3"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|long
+name|currentGen
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|IndexCommit
+name|ic
+range|:
+name|IndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+control|)
+block|{
+name|assertTrue
+argument_list|(
+literal|"currentGen="
+operator|+
+name|currentGen
+operator|+
+literal|" commitGen="
+operator|+
+name|ic
+operator|.
+name|getGeneration
+argument_list|()
+argument_list|,
+name|currentGen
+operator|<
+name|ic
+operator|.
+name|getGeneration
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|currentGen
+operator|=
+name|ic
+operator|.
+name|getGeneration
+argument_list|()
+expr_stmt|;
+block|}
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
